<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="measure">Measure</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. New measurements not possible.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_connected">connected</string>
    <string name="title_not_connected">not connected</string>
    <string name="measurement_not_started">Measurement not initiated!</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <string name="secure_connect">Connect a device</string>
    <string name="farm_name">Farm Name</string>
    <string name="map">Map</string>
    <string name="treatment">Treatment</string>
    <string name="image_of_farm">Image of farm</string>
    <string name="farm_name_edit">Farm Name</string>
    <string name="save">Save</string>
    <string name="blank_image">Blank Image</string>
    <string name="capture_image">Capture Image</string>
    <string name="notes">Notes</string>

    <!-- Entry Menu -->
    <string name="farm_info_activity">Enter information about farm</string>
    <string name="textview">TextView</string>
    <string name="notes_default">Notes</string>
    <string name="save_data">Save Data</string>
    <string name="load_from_other">Load from other</string>
    <string name="turn_on_gps">Please turn on GPS!</string>
    <string name="gps_available">GPS available</string>

</resources>
