<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="7dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:paddingEnd="10dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp"
        android:paddingBottom="100dp"
        android:id="@+id/cview">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="73dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/farm_image"
                    app:layout_row="0"
                    app:layout_column="0"
                    android:contentDescription="@string/image_of_farm"
                    android:cropToPadding="false"
                    android:adjustViewBounds="true"
                    android:layout_alignParentLeft="true"
                    />

                <com.fpil.android.remotesensor.LeafColorView
                    android:id="@+id/leaf_color"
                    android:layout_width="178dp"
                    android:layout_height="70dp"
                    android:background="#0ccc"
                    android:paddingBottom="1dp"
                    android:paddingLeft="1dp"
                    android:layout_alignParentRight="true"
                    app:gradientWidth="400dp"
                    app:markerWidth="5dp"
                    app:markerHeight="2dp"
                    app:markerThickness="10.0"
                    app:initMark="0.3" />

                <!--
                <view
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    class="android.support.v4.widget.Space"
                    android:id="@+id/view"
                    android:layout_weight="1" /> -->

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/farm_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/farm_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:layout_alignParentLeft="true"
                    app:layout_row="1"
                    app:layout_column="0"
                    app:layout_columnSpan="2" />

                <Button
                    android:text="@string/map"
                    android:id="@+id/button_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    />

            </RelativeLayout>

            <TextView
                android:text="@string/treatment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/farm_treat"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

            <TextView
                android:text="@string/notes_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/farm_note"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>